samples/basic/vpc.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.small
    AllowedValues:
      - t2.nano
      - t2.micro
      - t2.small
      - t2.medium
      - t2.large
    ConstraintDescription: must be a valid EC2 instance type.
  ImageId:
    Description: AMI ID
    Type: String
    Default: ami-0ff21806645c5e492
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  DomainName:
    Description: Name of an domain
    Type: String
    ConstraintDescription: must be the name of domain
  HostedZoneId:
    Description: Route53 host zone id
    Type: AWS::Route53::HostedZone::Id
    ConstraintDescription: Route53 host zone id
  AcmCertificateArn:
    Description: us-east-1's certificate arn for CloudFront
    Type: String
    ConstraintDescription: us-east-1's certificate arn for CloudFront
  AWSLogsBucketName:
    Description: AWS logs bucket name
    Type: String
    ConstraintDescription: AWS logs bucket name

Resources:
  # -------------------------
  # VPC
  # -------------------------
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsHostnames: true
      EnableDnsSupport: true
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_vpc'


  # -------------------------
  # IGW
  # -------------------------
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_igw'
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway


  # -------------------------
  # RouteTable
  # -------------------------
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    # VPCにIGWがアタッチし終わらないといけないため
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_private-route-table'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    # VPCにIGWがアタッチし終わらないといけないため
    DependsOn: AttachGateway
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_public-route-table'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      # デフォルトはVPCのcidr blockのみが入る
      # 追加する場合は以下を書く
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway


  # -------------------------
  # Subnet pub-a
  # -------------------------
  SubnetPubA:
    Type: AWS::EC2::Subnet
    # VPCにIGWがアタッチし終わらないといけないため
    # PublicRouteを指定するでもよい？
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.0.0/21
      AvailabilityZone: ap-northeast-1a
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_pub-a'
  # サブネットとルートテーブルを紐付ける
  # こういった紐付ける系の指定の仕方が多いので、
  # どういった単位で指定するのかはドキュメントを読む
  SubnetPubARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPubA
      RouteTableId: !Ref PublicRouteTable
  # -------------------------
  # Subnet pub-c
  # -------------------------
  SubnetPubC:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      CidrBlock: 10.0.16.0/21
      AvailabilityZone: ap-northeast-1c
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_pub-c'
  SubnetPubCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref SubnetPubC
      RouteTableId: !Ref PublicRouteTable


  # -------------------------
  # EC2
  # -------------------------
  EC2Instance:
    Type: AWS::EC2::Instance
    DependsOn: AttachGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_web-server'
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      InstanceType: !Ref InstanceType
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeSize: 8
            DeleteOnTermination: true
            VolumeType: gp2
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref SubnetPubA
          GroupSet:
            - !Ref SshSecurityGroup
            - !Ref InternalSecurityGroup
      UserData: !Base64 |
        #!/bin/bash
        sudo amazon-linux-extras install nginx1.12
        sudo systemctl start nginx
        sudo systemctl enable nginx


  # -------------------------
  # Security Group -> SSH
  # -------------------------
  SshSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${AWS::StackName}_ssh-any'
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_ssh-any'
  # -------------------------
  # Security Group -> Web
  # -------------------------
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub '${AWS::StackName}_web-any'
      GroupDescription: Enable Web access via port 80 and 443
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_web-any'
  # -------------------------
  # Security Group -> Internal
  # -------------------------
  InternalSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: cloudformation-prod_internal
      GroupDescription: Allow internal.
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_internal'
  InternalSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref InternalSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref InternalSecurityGroup


  # -------------------------
  # ALB
  # -------------------------
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 30
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 5
      UnhealthyThresholdCount: 3
      Matcher:
        HttpCode: 200
      Name: web-server-target-group
      Port: 80
      Protocol: HTTP
      Targets:
        - Id: !Ref EC2Instance
          Port: 80
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_web-server-target-group'
  ALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: web-server-alb
      Scheme: internet-facing
      SecurityGroups:
        - !Ref InternalSecurityGroup
        - !Ref WebSecurityGroup
      Subnets:
        - !Ref SubnetPubA
        - !Ref SubnetPubC
      Type: application
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_web-server-alb'
  ALBListener80:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Host: '#{host}'
            Path: '/#{path}'
            Port: 443
            Protocol: HTTPS
            Query: '#{query}'
            StatusCode: HTTP_302
      LoadBalancerArn: !Ref ALB
      Port: 80
      Protocol: HTTP
  ALBListener443:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      # ProtocolがHTTPSの場合必須
      # デフォルトとなる証明書をアタッチする
      Certificates:
        - CertificateArn: !Ref SSLDomainNameCertificate
      DefaultActions:
        - TargetGroupArn: !Ref TargetGroup
          Type: forward
      LoadBalancerArn: !Ref ALB
      Port: 443
      Protocol: HTTPS
  # デフォルト以外の証明書をここでアタッチする
  ALBListenerCertificate:
    Type: AWS::ElasticLoadBalancingV2::ListenerCertificate
    Properties:
      Certificates:
        - CertificateArn: !Ref SSLSubDomainNameCertificate
      ListenerArn: !Ref ALBListener443


  # -------------------------
  # Certificate -> Domain
  # -------------------------
  SSLDomainNameCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref DomainName
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_domain'
      ValidationMethod: DNS
  # -------------------------
  # Certificate -> SubDomain
  # -------------------------
  SSLSubDomainNameCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Sub '*.${DomainName}'
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}_sub-domain'
      ValidationMethod: DNS


  # -------------------------
  # Route53 -> Alias Record -> ALB
  # -------------------------
  ALBRecordSetGroup:
    Type: AWS::Route53::RecordSetGroup
    DependsOn: CloudFront
    Properties:
      HostedZoneId: !Ref HostedZoneId
      RecordSets:
        - Name: !Ref DomainName
          Type: A
          AliasTarget:
            DNSName: !GetAtt CloudFront.DomainName
            # CloudFrontに割り当てられる一意のHostZoneIdを指定する
            HostedZoneId: Z2FDTNDATAQYW2
#            # ALBのエイリアスレコードを設定する場合はこのように指定する
#            HostedZoneId: !GetAtt ALB.CanonicalHostedZoneID


  # -------------------------
  # CloudFront
  # -------------------------
  CloudFront:
    Type: AWS::CloudFront::Distribution
    DependsOn: AWSLogsS3
    Properties:
      DistributionConfig:
        Aliases:
          - !Ref DomainName
#        CacheBehaviors:
#          - CacheBehavior
#        CustomErrorResponses:
#          - CustomErrorResponse
        DefaultCacheBehavior:
          AllowedMethods:
            - GET
            - HEAD
            - OPTIONS
            - PUT
            - PATCH
            - POST
            - DELETE
          CachedMethods:
            - GET
            - HEAD
            - OPTIONS
          Compress: true
          DefaultTTL: 86400
          MaxTTL: 86400
          MinTTL: 86400
          ForwardedValues:
            Cookies:
              Forward: none
            # ヘッダーをすべてオリジンに転送する場合はこのように設定し、MinTTLは0に設定する
#            Headers:
#              - '*'
            # ALBをオリジンとしたリソースとSSL通信する場合、最低でもHostヘッダーは送信する必要がある
            Headers:
              - Host
              # CORSを設定している場合はOriginヘッダーを送信する
#              - Origin
            QueryString: true
          TargetOriginId: web-server-alb
          ViewerProtocolPolicy: redirect-to-https
        Enabled: true
        HttpVersion: http2
        IPV6Enabled: true
        Logging:
          Bucket: !GetAtt AWSLogsS3.DomainName
          IncludeCookies: false
          Prefix: !Sub "cloudfront/${AWS::StackName}_${DomainName}/"
        Origins:
          - CustomOriginConfig:
              HTTPPort: 80
              HTTPSPort: 443
              OriginKeepaliveTimeout: 5
              OriginProtocolPolicy: https-only
              OriginReadTimeout: 30
              OriginSSLProtocols:
                - TLSv1
            DomainName: !GetAtt ALB.DNSName
            Id: web-server-alb
        PriceClass: PriceClass_All
#        Restrictions:
#          Restrictions
        ViewerCertificate:
          AcmCertificateArn:  !Ref AcmCertificateArn
          SslSupportMethod: sni-only
          MinimumProtocolVersion: TLSv1.1_2016
#        WebACLId: String

  # -------------------------
  # S3 -> yaizuuuu-aws-logs
  # -------------------------
  AWSLogsS3:
    Type: AWS::S3::Bucket
    Properties:
      AccessControl: Private
      BucketName: !Ref AWSLogsBucketName
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        BlockPublicPolicy: false
        IgnorePublicAcls: false
        RestrictPublicBuckets: false
  AWSLogsS3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    DependsOn: AWSLogsS3
    Properties:
      Bucket: !Ref AWSLogsBucketName
      PolicyDocument:
        Statement:
          - Action:
              - s3:PutObject
            Effect: Allow
            Resource: !Sub "arn:aws:s3:::${AWSLogsBucketName}/*"
            Principal:
              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"

  # -------------------------
  # WAF
  # -------------------------
  WAF:
    Type: AWS::WAF::WebACL
    Properties:
      DefaultAction: ALLOW
      MetricName: String
      Name: !Sub "${AWS::StackName}_${DomainName}"
      Rules:
        - ActivatedRule

#UserData:
#  # 短縮形は連続して使えないためFn::Base64(完全形) -> !Sub(短縮形)となる
#  Fn::Base64:
#    # 文字列に${}で動的な文字列を差し込める
#    !Sub |
#    #!/bin/bash -xe
#    yum update -y aws-cfn-bootstrap
#    /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource LaunchConfig --configsets wordpress_install --region ${AWS::Region}
#    /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerGroup --region ${AWS::Region}
